--- a/sc_app/templates/base.html
+++ b/sc_app/templates/base.html
@@ -30,6 +30,8 @@
     {% include 'js.html' %}
   </body>
   <footer>
+    <div class="footer bg-light">
       {% include 'footer.html' %}
+    </div>
   </footer>
 </html>
