--- a/sc_app/templates/dashboard/snippets/faq.html
+++ b/sc_app/templates/dashboard/snippets/faq.html
@@ -1,12 +1,12 @@
 <div class="container" id="clientdetails">
-  <h3>FAQs</h3>
+  <h3>FAQ's</h3>
 
   <div class="accordion" id="accordionExample">
     <div class="accordion" id="accordionExample">
       <div class="card">
         <div class="card-header" id="headingOne">
           <h2 class="mb-0">
-            <button id='faqbutton' class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            <button id='faqbutton' class="btn btn-link btn-block text-left faq-button" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
               How can I get in touch?
             </button>
           </h2>
@@ -23,7 +23,7 @@
     <div class="card">
       <div class="card-header" id="headingTwo">
         <h2 class="mb-0">
-          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed faq-button" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
             Do you guys offer a referral bonus if I send a friend your way?
           </button>
         </h2>
@@ -41,7 +41,7 @@
     <div class="card">
       <div class="card-header" id="headingThree">
         <h2 class="mb-0">
-          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed faq-button" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
             What is the difference between Instagram Centred and Email Database Centred Competition?
           </button>
         </h2>
@@ -59,7 +59,7 @@
     <div class="card">
       <div class="card-header" id="headingFour">
         <h2 class="mb-0">
-          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed faq-button" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
             How can I increase the number of my followers?
           </button>
         </h2>
@@ -76,7 +76,7 @@
     <div class="card">
       <div class="card-header" id="headingFive">
         <h2 class="mb-0">
-          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed faq-button" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
             How does the engagement pod deliver likes?
           </button>
         </h2>
@@ -94,7 +94,7 @@
     <div class="card">
       <div class="card-header" id="headingSix">
         <h2 class="mb-0">
-          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed faq-button" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
             My post has gone live and i’ve not had the engagement pod send the likes yet. What do I do?
           </button>
         </h2>
@@ -112,7 +112,7 @@
     <div class="card">
       <div class="card-header" id="headingSeven">
         <h2 class="mb-0">
-          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed faq-button" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
             How long does the engagement pod normally take to go live?
           </button>
         </h2>
@@ -127,7 +127,7 @@
     <div class="card">
       <div class="card-header" id="headingEight">
         <h2 class="mb-0">
-          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed faq-button" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
             Where can I read T&C’s of working with you?
           </button>
         </h2>
@@ -143,7 +143,7 @@
     <div class="card">
       <div class="card-header" id="headingNine">
         <h2 class="mb-0">
-          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed faq-button" type="button" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
             How can I add to or remove subscriptions I'm signed up to?
           </button>
         </h2>
@@ -154,6 +154,25 @@
           you can always email georgia@wearethenatureboys.com. <br><br>Please do give us a good few days at least before your
           next payment run so that we have the time to spot the email and make that adjustment before the next payment
           run goes out for you.
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header" id="headingTen">
+        <h2 class="mb-0">
+          <button id='faqbutton' class="btn btn-link btn-block text-left collapsed faq-button" type="button" data-toggle="collapse" data-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
+            Is there any contract for my subscriptions?
+          </button>
+        </h2>
+      </div>
+      <div id="collapseTen" class="collapse" aria-labelledby="headingNine" data-parent="#accordionExample">
+        <div class="card-body" id="faq-text">
+          All we care about is delivering a service that delivers such exceptional value that you're happy to be paying for it. If that
+          was to change for any reason then we think it's unfair to force you into contracts that keep you paying for 3, 6 or 12 months ahead.
+          <br><br>So all subscriptions have a month by month contract that you can cancel at anytime. We ask that you show us patience
+          as sometimes a service takes time to deliver the impact we're after (Rome wasn't built in a day) but if you're consistently
+          unhappy then you're always free to cancel by just getting in touch over email.
         </div>
       </div>
     </div>
