--- a/sc_app/templates/footer.html
+++ b/sc_app/templates/footer.html
@@ -1,4 +1,1 @@
-
-<div class="footer bg-light">
-  <p>Copyright Snowball Creations Limited | <a href="{% url 'dashboard' %}">Dashboard</a> | <a href="www.wearethenatureboys.com">Back to Main Site</a></p>
-</div>
+  <p class="site-footer">Copyright Snowball Creations Limited | <a class='site-footer' href="{% url 'dashboard' %}">Dashboard</a> | <a class='site-footer' href="www.wearethenatureboys.com">Back to Main Site</a></p>
