--- a/sc_app/templates/dashboard/dashboard.html
+++ b/sc_app/templates/dashboard/dashboard.html
@@ -6,7 +6,7 @@
 
 <div class="container" id="totalpanel">
   <div class="container" id="clientdetails">
-    <h3>{{ user.userprofile.company.name }}'s details</h3>
+    <h3>{{ user.userprofile.company.name }}'s Details</h3>
     <div class="row">
       <div class="col col-4 mx-auto">
         <p><strong>Company: </strong><br>{{ user.userprofile.company.name }}</p>
@@ -21,8 +21,14 @@
       <div class="col col-4 mx-auto">
         {% if user.userprofile.company.url %}
         <p><strong>Website: </strong><br>{{ user.userprofile.company.url }}</p>
+        {% else %}
+        <p><strong>Website: </strong><br>No website</p>
         {% endif %}
+        {% if user.userprofile.company.primary_contact.email %}
         <p><strong>Primary contact email: </strong><br>{{ user.userprofile.company.primary_contact.email }}</p>
+        {% else %}
+        <p><strong>Primary contact email: </strong><br>No email</p>
+        {% endif %}
         {% if user.userprofile.company.secondary_contact.email %}
         <p><strong>Secondary contact email: </strong><br>{{ user.userprofile.company.secondary_contact.email }}</p>
         {% endif %}
@@ -45,7 +51,7 @@
           <tr>
             <td id='subscription-list'>{{ subscription.social_profile }}</td>
             <td id='subscription-list'>{{ subscription.service_used }}</td>
-            <td id='subscription-list'><a href="{{ subscription.service_used.url }}">Click for info</a></td>
+            <td id='subscription-list'><a href="{{ subscription.service_used.url }}" target="_blank">Click for info</a></td>
           </tr>
         {% endfor %}
       {% endif %}
@@ -66,7 +72,7 @@
                 Our complete guide on all the basics to advanced use of Instagram. This
                 is the best place to start if you're trying to upgrade your social game!
               </small>
-              <br><a href="https://docs.google.com/document/d/1-3C6hG_7SEo-WHNoesYsZzeVflC-GaQ05l93mEkkbVY/edit?usp=sharing" class="btn btn-sm btn-dark" target="_blank">Read here</a>
+              <br><a href="https://docs.google.com/document/d/1-3C6hG_7SEo-WHNoesYsZzeVflC-GaQ05l93mEkkbVY/edit?usp=sharing" class="btn btn-sm btn-dark sc-button" target="_blank">Read here</a>
             </div>
           </div>
         </div>
