--- a/sc_app/users/templates/users/login.html
+++ b/sc_app/users/templates/users/login.html
@@ -9,7 +9,7 @@
         {{ form|crispy }}
       </fieldset>
       <div class="form-group">
-        <button class="btn btn-outline-info" type="submit" name="button">Login</button>
+        <button class="btn btn-md btn-dark sc-button" type="submit" name="button">Login</button>
       </div>
     </form>
     <br>
