got fonts connecting

--- a/sc_app/users/templates/users/profile.html
+++ b/sc_app/users/templates/users/profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-<h1>Account information for {{ user.username }}</h1>
+<h1>Account Information:<br>{{ user.username }}</h1>
 <div class="content-section" id="totalpanel">
   <div class="container" id="clientdetails">
     <h3>Edit your account details below</h3>
