--- a/sc_app/static/dashboard/mystyle.css
+++ b/sc_app/static/dashboard/mystyle.css
@@ -29,12 +29,13 @@ h1 {
   color: white;
   text-align: center;
   width: 500px;
-  padding: 20px 0px 20px 10px;
+  padding: 20px 15px 20px 15px;
   border: 0px;
   margin: 20px auto 10px auto;
   background-color: #304052;
-  font-weight: 400;
-  font-family: 'Circe Bold';
+  font-family: circe, sans-serif;
+  font-weight: 600;
+  font-style: normal;
   letter-spacing: 0.1em;
 }
 
@@ -46,7 +47,8 @@ h3 {
   padding: 8px 0px 8px 0px;
   color: white;
   width: 70%;
-  font-family: 'Circe Bold';
+  font-family: circe, sans-serif;
+  font-weight: 500;
   letter-spacing: 0.05em;
 }
 
@@ -57,18 +59,19 @@ h6 {
   padding: 6px 0px 6px 0px;
   width: 70%;
   margin: auto;
-  font-family: 'Circe Bold';
-
+  font-family: circe, sans-serif;
+  font-weight: 400;
 }
 
 p, td, small {
-  font-family: 'Circe Light';
+  font-family: circe, sans-serif;
+  font-weight: 300;
 }
 
 a {
   color: #384052;
-  font-family: 'Circe Light';
-  font-weight: 600;
+  font-family: circe, sans-serif;
+  font-weight: 400;
 }
 
 .btn {
