Updated footer links and email to new domain for snowballcreations and fixed forms in profile page

--- a/sc_app/templates/dashboard/snippets/faq.html
+++ b/sc_app/templates/dashboard/snippets/faq.html
@@ -13,7 +13,7 @@
         </div>
         <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
           <div class="card-body" id="faq-text">
-            Best thing to do is email georgia@wearethenatureboys.com
+            Best thing to do is email georgia@snowballcreations.com
             <br><br>Or if you’re looking to have a larger discussion about anything like say you’re interested in a service
             like our competitions, FB & Insta paid ads management or Linkedin Lead Gen, then you can book a call here:<br><br> <a href="https://calendly.com/thenatureboys/social-support" target="_blank">Nature Boys Calendar</a>
           </div>
@@ -104,7 +104,7 @@
           Sometimes the pod will take longer than normal as the algorithm works around Instagram. This is natural and is
           on purpose as it makes sure that the likes are delivered in the most effective way possible to deliver the biggest impact.
           <br><br>If your post has been live for over 24 hours though and still there are less than 300 likes then there may be something
-          wrong. <br><br>So simply email georgia@wearethenatureboys.com and she’ll be happy to help!
+          wrong. <br><br>So simply email georgia@snowballcreations.com and she’ll be happy to help!
         </div>
       </div>
     </div>
@@ -151,7 +151,7 @@
       <div id="collapseNine" class="collapse" aria-labelledby="headingNine" data-parent="#accordionExample">
         <div class="card-body" id="faq-text">
           If you’re looking to add a new package or find out more about one, or perhaps unhappy and looking to cancel,
-          you can always email georgia@wearethenatureboys.com. <br><br>Please do give us a good few days at least before your
+          you can always email georgia@snowballcreations.com. <br><br>Please do give us a good few days at least before your
           next payment run so that we have the time to spot the email and make that adjustment before the next payment
           run goes out for you.
         </div>
