--- a/sc_app/users/templates/users/profile.html
+++ b/sc_app/users/templates/users/profile.html
@@ -9,8 +9,8 @@
       <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset class="form-group">
-          {{ u_form|crispy }}
-          {{ c_form|crispy }}
+          {{ user_form|crispy }}
+          {{ company_form|crispy }}
         </fieldset>
         <div class="form-group">
           <button class="btn btn-outline-info" type="submit" name="button">Update</button>
