--- a/sc_app/static/dashboard/mystyle.css
+++ b/sc_app/static/dashboard/mystyle.css
@@ -100,10 +100,17 @@ a {
   background-color: rgba(56, 64, 82, 1);
 }
 
-.custom-toggler .navbar-toggler-icon {
+.navbar-toggler .icon-bar {
+  background-color: transparent;
+  background: url("/static/images/white-burger-menu.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+/* .custom-toggler .navbar-toggler-icon {
     background-image: url(
 "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-}
+} */
 
 .second-level-navbar a {
   text-align: center;
