update email on login page

--- a/sc_app/users/templates/users/login.html
+++ b/sc_app/users/templates/users/login.html
@@ -13,6 +13,6 @@
       </div>
     </form>
     <br>
-    <p>Need logins? Email us at georgia@wearethenatureboys.com</p>
+    <p>Need logins? Email us at georgia@snowballcreations.com</p>
   </div>
 {% endblock %}
