Added urls to clientbase

--- a/sc_app/templates/client_base/client_list.html
+++ b/sc_app/templates/client_base/client_list.html
@@ -22,6 +22,9 @@
         <div class="col"
           <td>{{ company.subscription.service }}</td>
         </div>
+        <div class="col"
+          <td>{{ company.url }}</td>
+        </div>
       </div>
       {% endfor %}
 
