Fixed clientbase url with the naming feature of name of urls file then name of url

--- a/sc_app/templates/dashboard/dashboard.html
+++ b/sc_app/templates/dashboard/dashboard.html
@@ -137,7 +137,7 @@
                 <div class="card-body">
                   <h6 class="card-title">Client Base</h6>
                   <small class="card-text" id='resourceandappcardtext'>For admin to see our lovely clients</small>
-                  <br><a href="https://snowball-creations.herokuapp.com/client_base" class="btn btn-sm btn-dark">Click here</a>
+                  <br><a href="{% url 'client_base:clientslist' %}" class="btn btn-sm btn-dark">Click here</a>
                 </div>
               </div>
             </div>
