--- a/sc_app/templates/client_base/client_list.html
+++ b/sc_app/templates/client_base/client_list.html
@@ -4,23 +4,23 @@
 
 <h1>Client Base</h1>
 
-<div class="container" id="totalpanel">
-    {% for company in object_list %}
+<div class="container clientpanel">
+    {% for subscription in object_list %}
       <div class="row mx-auto">
-        <div class="col">
-          <td>{{ company.id }}</td>
+        <div class="col col-1">
+          <td>{{ subscription.id }}</td>
         </div>
         <div class="col">
-          <td>{{ company.name }}</td>
+          <td>{{ subscription.company }}</td>
         </div>
         <div class="col"
-          <td>{{ company.primary_contact.username }}</td>
+          <td>{{ subscription.company.name }}</td>
         </div>
         <div class="col"
-          <td>{{ company.primary_contact.email }}</td>
+          <td>{{ subscription.company.primary_contact.name }}</td>
         </div>
         <div class="col"
-          <td>{{ company.subscription.service }}</td>
+          <td>{{ company.subscriptions.all }}</td>
         </div>
         <div class="col"
           <td>{{ company.url }}</td>
@@ -31,3 +31,6 @@
 </div>
 
 {% endblock content %}
+
+<!-- for each subscription from company in object list
+print out a row of info. -->
