--- a/sc_app/templates/client_base/client_list.html
+++ b/sc_app/templates/client_base/client_list.html
@@ -3,22 +3,83 @@
 {% block content %}
 <h1>Client Base</h1>
 <div class="container clientpanel">
+  <div class="row mx-auto client-base-headers">
+    <div class="col col-1"
+      <td>ID</td>
+    </div>
+    <div class="col col-1"
+      <td>Created</td>
+    </div>
+    <div class="col col-1"
+      <td>Company name</td>
+    </div>
+    <div class="col col-1"
+      <td>Contact Name</td>
+    </div>
+    <div class="col col-2"
+      <td>Contact Email</td>
+    </div>
+    <div class="col col-1"
+      <td>Social Username</td>
+    </div>
+    <div class="col col-1"
+      <td>Social URL</td>
+    </div>
+    <div class="col col-1"
+      <td>Service</td>
+    </div>
+    <div class="col col-1"
+      <td>Price</td>
+    </div>
+    <div class="col col-1"
+      <td>Subscription Create Date</td>
+    </div>
+    <div class="col col-1"
+      <td>Subscription Start Date</td>
+    </div>
+  </div>
+
     {% for subscription in object_list %}
-      <div class="row mx-auto">
+      <div class="row mx-auto client-base-row">
         <div class="col col-1">
           <td>{{ subscription.id }}</td>
         </div>
         {% for company in subscription.company_set.all %}
-        <div class="col"
+        <div class="col col-1"
+          {% if company.created_at %}
+            <td>{{ company.created_at }}</td>
+          {% else %}
+            <td><p></p></td>
+          {% endif %}
+        </div>
+        <div class="col col-1"
           <td>{{ company.name }}</td>
         </div>
-        <div class="col"
+        <div class="col col-1"
           <td>{{ company.primary_contact.name }}</td>
         </div>
-        <div class="col"
-          <td>{{ company.url }}</td>
+        <div class="col col-2"
+          <td>{{ company.primary_contact.email }}</td>
         </div>
         {% endfor %}
+        <div class="col col-1"
+          <td>{{ subscription.social_profile.username }}</td>
+        </div>
+        <div class="col col-1"
+          <td>{{ subscription.social_profile.url }}</td>
+        </div>
+        <div class="col col-1"
+          <td>{{ subscription.service_used.name }}</td>
+        </div>
+        <div class="col col-1"
+          <td>{{ subscription.service_used.price }}</td>
+        </div>
+        <div class="col col-1"
+          <td>{{ subscription.created_at }}</td>
+        </div>
+        <div class="col col-1"
+          <td>{{ subscription.date_started }}</td>
+        </div>
       </div>
       {% endfor %}
 </div>
