Removed date_created from company

--- a/sc_app/templates/client_base/client_list.html
+++ b/sc_app/templates/client_base/client_list.html
@@ -46,7 +46,7 @@
         </div>
         {% for company in subscription.company_set.all %}
         <div class="col col-1"
-            <td>{{ company.date_created }}</td>
+            <!-- <td>{{ company.date_created }}</td> -->
         </div>
         <div class="col col-1"
           <td>{{ company.name }}</td>
