--- a/sc_app/templates/client_base/client_list.html
+++ b/sc_app/templates/client_base/client_list.html
@@ -20,7 +20,7 @@
     </div>
 
     {% for subscription in object_list %}
-    <div class="new-client-base-row" style="display: flex; justify-content: space-evenly; align-items: center; transition: 0.2s ease-in-out;">
+    <div class="new-client-base-row" style="display: flex; justify-content: space-evenly; align-items: center; transition: 0.2s ease-in-out;">      
       <div>{{ subscription.id }}</div>
       <div>{{ company.date_created }} --></div>
       {% with subscription.company_set.all|first as company %}
@@ -36,6 +36,11 @@
       <div>{{ subscription.date_started }}</div>
     </div>
     {% endfor %}
+    <!-- This is the total price row -->
+    <div class="new-client-base-row">    
+        <!-- We can just call that new context with it's name 'totalPrice' and it appears -->
+      Total: {{ totalPrice }}            
+    </div>    
     </div>
   </div>
 </div>
