--- a/sc_app/static/dashboard/mystyle.css
+++ b/sc_app/static/dashboard/mystyle.css
@@ -39,6 +39,21 @@ h1 {
   letter-spacing: 0.1em;
 }
 
+h2 {
+  color: white;
+  text-align: center;
+  width: 800px;
+  padding: 20px 15px 20px 15px;
+  border: 0px;
+  margin: 20px auto 10px auto;
+  background-color: #304052;
+  font-family: circe, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: 0.08em;
+  font-size: 1.6em
+}
+
 h3 {
   text-align: center;
   margin: 20px auto 20px auto;
