--- a/sc_app/templates/client_base/client_list.html
+++ b/sc_app/templates/client_base/client_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Client Base</h1>
-
+<h2>Total Monthly Rev: {{ totalPrice }} | Total Clients: {{ totalNumber }}</h2>
 <div class="new-client-base">
   <div>
     <div class="new-client-base-headers" style="display: flex; justify-content: space-evenly; align-items: center;">
@@ -20,7 +20,7 @@
     </div>
 
     {% for subscription in object_list %}
-    <div class="new-client-base-row" style="display: flex; justify-content: space-evenly; align-items: center; transition: 0.2s ease-in-out;">      
+    <div class="new-client-base-row" style="display: flex; justify-content: space-evenly; align-items: center; transition: 0.2s ease-in-out;">
       <div>{{ subscription.id }}</div>
       <div>{{ company.date_created }} --></div>
       {% with subscription.company_set.all|first as company %}
@@ -37,10 +37,10 @@
     </div>
     {% endfor %}
     <!-- This is the total price row -->
-    <div class="new-client-base-row">    
+    <div class="new-client-base-row">
         <!-- We can just call that new context with it's name 'totalPrice' and it appears -->
-      Total: {{ totalPrice }}            
-    </div>    
+      Total: {{ totalPrice }}
+    </div>
     </div>
   </div>
 </div>
