--- a/sc_app/templates/client_base/client_list.html
+++ b/sc_app/templates/client_base/client_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Client Base</h1>
-<h2>Total Monthly Rev: {{ totalPrice }} | Total Clients: {{ totalNumber }}</h2>
+<h2>Total Monthly Rev: {{ totalPrice }} | Total Subscriptions: {{ totalNumber }}</h2>
 <div class="new-client-base">
   <div>
     <div class="new-client-base-headers" style="display: flex; justify-content: space-evenly; align-items: center;">
