--- a/sc_app/templates/client_base/client_list.html
+++ b/sc_app/templates/client_base/client_list.html
@@ -22,8 +22,8 @@
     {% for subscription in object_list %}
     <div class="new-client-base-row" style="display: flex; justify-content: space-evenly; align-items: center; transition: 0.2s ease-in-out;">
       <div>{{ subscription.id }}</div>
-      <div>{{ company.date_created }} --></div>
       {% with subscription.company_set.all|first as company %}
+      <div>{{ company.created_at|date:"d/m/y" }}</div>
       <div>{{ company.name }}</div>
       <div>{{ company.primary_contact.first_name }} {{ company.primary_contact.last_name }}</div>
       <div>{{ company.primary_contact.email|urlize }}</div>
