added meta ordering to company

--- a/sc_app/templates/client_base/client_list.html
+++ b/sc_app/templates/client_base/client_list.html
@@ -6,7 +6,7 @@
 <div class="new-client-base">
   <div>
     <div class="new-client-base-headers" style="display: flex; justify-content: space-evenly; align-items: center;">
-      <div>Created</div>
+      <div>Company Created</div>
       <div>Company Name</div>
       <div>Contact Name</div>
       <div>Contact Email</div>
@@ -15,8 +15,8 @@
       <div>Service</div>
       <div>Price</div>
       <div>Source</div>
-      <div>Sub. Create Date</div>
-      <div>Sub. Start Date</div>
+      <div>Sub. Created</div>
+      <div>Sub. Started</div>
     </div>
 
     {% for subscription in object_list %}
